--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
